# howido

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.css  build.sh  debug.sh  deploy.sh  dev.css  devCSS.sh  docker-compose.yml  main.css  modal.html  network-to-notify.md  package-lock.json  package.json  postcss.config.js  prod.css  prod_instructions.md  request.js  stylelint.config.js  tailwind.config.js  test.http  todo.md  up.sql
app/: .metadata  pubspec.yaml
app/ios/Runner/: Info.plist.orig
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
client/: Dockerfile  README.md  chicken-soup.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  snowpack.config.js  tailwind.config.js  tsconfig.json
client/components/: CreateStep.tsx  Layout.tsx  Step.tsx  StyledLink.tsx
client/pages/: _app.tsx  about.tsx  account-created.tsx  chicken-chores.tsx  create-step.tsx  followers.tsx  following.tsx  index.tsx  login.tsx  profile.tsx  sign-up.tsx
client/public/: index.html
client/src/: App.tsx  image-blob-reduce.d.ts  index.tsx
client/src/pages/: About.tsx  (+16 more)
client/styles/: global.css
client/util/: STATIC_DB.ts  context.ts
css/: devCSS.sh  prod.css  prodCSS.sh  tailwind.config.js  tw.md
css-modules/: buttons.css  input.css  main.css
db/: db-connect.sh  db-start.sh  down.sql  misc.sh  start.sh  up.sql
sql/: down.sql
src/: img_upload.rs  main.rs
src/sql_migrations/: V1__init.sql
templates/: MAIN-layout.html  a-base.html  a-close.html  a-create.html  a-delete.html  account.html  base.html  create-instruction.js  create-step.js  field_error.html  form-error.html  images-page.html  index.html  instruction-form.html  instruction-page-row.html  instruction-page.html  instruction-page.js  instruction-row.html  instructions.html  modal.html  new-instruction.html  page-header.html  request.js  test.html  update-instruction.js
(+9 files in other folders)
