[package]
name = "howido"
version = "0.1.0"
authors = ["jesserwight <jessewright01@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = { version = "3.3.2", features = ["rustls"] }
serde = "1.0.118"
env_logger = "0.8.2"
serde_json = "1.0.61"
sqlx = { version = "0.4.2", features = ["postgres", "chrono", "runtime-actix-rustls"] }
dotenv = "0.15.0"
actix-multipart = "0.3.0"
futures = "0.3.8"
sanitize-filename = "0.3.0"
actix-cors = "0.5.4"
rustls = "0.19.0"
refinery = { version = "0.5.0", features = ["postgres"] }
actix-files = "0.5.0"
image = "0.23.14"
log = "0.4.14"
syslog = "5.0.0"

[[bin]]
name = "bin"
path = "src/main.rs"
